[package]
name = "listinfo"
version = "0.1.0"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
edition = "2018"
license = "MIT"
keywords = ["clrmamepro", "mame", "dat", "parse"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
nom = { version = "6.0.0-alpha1", default-features = false, features = ["alloc"] }
# serde = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
