[package]
name = "listinfo"
version = "0.2.0"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
edition = "2018"
license = "MIT"
keywords = ["clrmamepro", "mame", "dat", "parse"]
description = "Parser for MAME ListInfo DAT files."
readme = "Readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "deserialize"]
std = []
deserialize = ["std", "serde", "hex"]

[dependencies]
nom = { version = "6.0.0-alpha1", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
hex = { version = "0.4.2", default-features = false, optional = true }