[package]
name = "listinfo"
version = "0.3.5"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
edition = "2018"
license = "MIT"
keywords = ["clrmamepro", "mame", "dat", "listinfo", "parse"]
description = "A zero-copy MAME ListInfo format DAT files parser and deserializer."
readme = "Readme.md"
categories = ["parser-implementations", "emulators", "text-processing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []
deserialize = ["serde", "hex"]
test_deserialize = ["deserialize", "serde/derive", "serde_bytes"]

[dependencies]
nom = { version = "6.0.0-alpha1", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
serde_bytes = { version = "0.11.4", optional = true}
hex = { version = "0.4.2", default-features = false, optional = true }
indexmap = { version = "1.4.0" }

[package.metadata.docs.rs]
features = [ "test_deserialize", "std" ]

[package.metadata.playground]
features = [ "std", "deserialize" ]